Change references to egcs to GCC respectively remove the name at all. Fix some bits of markup and add more structure.  Add an example concerning the web pages. Shorten the (redundant) hints concerning further information.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -1,16 +1,15 @@
 <html>
 <head>
-<meta name="description" content="Anonymous read-only access to the egcs project CVS source repository.">
-<meta name="keywords" content="CVS, version control, egcs, source, public, repository">
- 
+<meta name="description" content="Anonymous read-only access to the GCC project CVS source repository.">
+<meta name="keywords" content="CVS, version control, GCC, source, public, repository">
 <title> Anonymous readonly CVS access</title>
 </head>
 
 <body>
 <h1>Anonymous read-only CVS access</h1>
 
-<p>In an ongoing effort to accelerate development of egcs and provide an
-open development environment, we are making the egcs CVS source repository
+<p>In an ongoing effort to accelerate development of GCC and provide an
+open development environment, we are making our CVS source repository
 available readonly to the public at large.
 
 <p>You'll be able to pick up the latest code whenever you want instead of
@@ -21,25 +20,20 @@ release branch(es) since they also live in the CVS repository.
 in texinfo form in the CVS sources.
 
 <ul>
-  <li><a href="/cgi-bin/cvsweb.cgi/egcs/">Browse the CVS
-  history online</a> via your web browser.
+  <li><a href="/cgi-bin/cvsweb.cgi/egcs/">Browse our CVS history
+  online</a> via your web browser.
 
-  <li><a href="http://www.cyclic.com/">Visit Cyclic Software</a> to pick up a
-  recent copy of CVS.  Links to books on the subject can also be found
-  there.
-
-  <li>A link to a reasonably simple introduction to CVS can be found
-  at <a href="http://www.cyclic.com/cvs/doc-blandy.html">Cyclic</a>,
-  which is also available in an <a
-  href="http://www.loria.fr/~molli/cvs/doc/cvs_toc.html">HTML
-  version</a>
-
+  <li><a href="http://www.cyclic.com/">Cyclic Software</a> offers downloads
+  of recent copies of CVS and lots of additional information, like a
+  <a href="http://www.cyclic.com/cvs/doc-blandy.html">reasonably simple
+  introduction</a>.
 </ul>
 
 
 <h2>Using the CVS repository</h2>
-<p>Assuming you have CVS installed on your machine you can check out the egcs
-sources with the following sequence of commands:
+
+<p>Assuming you have CVS installed on your machine you can check out the 
+GCC sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
 
@@ -55,14 +49,17 @@ a password; reply with <code>"anoncvs"</code>.
 
 <p>Issue the command 
 <pre>	cvs -z 9 co egcs</pre> 
-to check out the egcs sources.
+to check out the compiler sources, respectively
+<pre>	cvs -z 9 co wwwdocs</pre>
+to check out our web pages.
 
-<p>Once you've got the repository checked out <code>"cvs
-update"</code> will sync your local copy with the repository.  See the
-CVS manual for additional information on how to use CVS.
+<p>Once you've got the repository checked out `<code>cvs update</code>`
+will sync your local copy with the repository.  See the CVS manual for
+additional information on how to use CVS.
 
-<br><br>
-<strong>Note</strong>
+
+<h3>Note</h3>
+
 <p>It may be necessary to obtain patches for common utilities when building
 from CVS.  We recommend you read the <a href="faq.html#generated_files"> 
 FAQ entry regarding additional tools</a> you may need.  Another 
@@ -81,25 +78,20 @@ particular releases or snapshots or the latest snapshot.
 
 <ul>
   <li> egcs_1_1_2_release
-  <li> egcs_1_1_1_release
-  <li> egcs_1_1_release
   <li> egcs_ss_yymmdd
   <li> egcs_latest_snapshot
 </ul>
 
 
-<H2>egcs project web pages</h2>
+<H2>Web pages</h2>
 
 <p>The web pages for the egcs project are also in the CVS repository
 and you can check them out, submit patches, etc just like you do for
-the compiler itself.  Use <code>"cvs co wwwdocs"</code> to check out
+the compiler itself.  Use `<code>cvs co wwwdocs</code>` to check out
 the web pages.
 
-<p>Enjoy!
-
 <hr>
-<i>Last modified on June 8, 1999.</i>
-<hr>
+<i>Last modified on July  9, 1999.</i>
 
 </body>
 </html>
