--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -68,24 +68,35 @@ to make to the gperf utility</a>.
 
 <h3>CVS tags and checkouts</h3>
 
-<p> You can check out the latest version of the egcs-1.1.x release
+<p> You can check out the latest version of the gcc-2.95 release
 branch with the following command:
 
-<pre>	cvs -z 9 co -regcs_1_1_branch egcs</pre>
+<pre>	cvs -z 9 co -rgcc-2_95-branch egcs</pre>
 
 <p>By changing the <code>"-r"</code> argument above you can check out
-particular releases or snapshots or the latest snapshot.
+particular releases or snapshots or the latest snapshot.  Other tags/branches
+you may want to check out include:
 
 <ul>
   <li> egcs_1_1_2_release
+  <li> egcs_1_1_1_release
+  <li> egcs_1_1_release
+  <li> egcs_1_1_branch
+  <li> egcs_1_0_3_release
+  <li> egcs_1_0_2_release
+  <li> egcs_1_0_1_release
+  <li> egcs_1_0_release
   <li> egcs_ss_yymmdd
   <li> egcs_latest_snapshot
+  <li> new_ia32_branch
+  <li> egcs_gc_branch
+  <li> gnu-win32-b20-branch
 </ul>
 
 
 <H2>Web pages</h2>
 
-<p>The web pages for the egcs project are also in the CVS repository
+<p>The web pages for the GCC project are also in the CVS repository
 and you can check them out, submit patches, etc just like you do for
 the compiler itself.  Use `<code>cvs co wwwdocs</code>` to check out
 the web pages.
