Note strict aliasing issues Note gcc-2.95 gives an error for invalid asm statements

--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -6,6 +6,20 @@
 <h1 align="center">gcc-2.95 Caveats</h1>
 
 <ul>
+  <li>gcc-2.95 will issue an error for invalid asm statements that had been
+  silently accepted by earlier versions of the compiler.  This is particularly
+  noticable when compiling older versions of the Linux kernel (2.0.xx).
+  Please refer to the <a href="../faq.html#asmclobber">FAQ</a> for more
+  information on this issue.
+   
+  <li>gcc-2.95 implements type based alias analysis to disambiguate memory
+  references.  Some programs, particularly the Linux kernel violate ANSI/ISO
+  aliasing rules and therefore may not operate correctly when compiled with
+  gcc-2.95.  
+
+  Please refer to the <a href="../faq.html#linuxkernel">FAQ</a> for more
+  information on this issue.
+
   <li>gcc-2.95 has an integrated libstdc++, but does not have an integrated
   libg++.  Furthermore old libg++ releases will not work with gcc-2.95.  You can
   retrieve a recent copy of libg++ from the
@@ -35,7 +49,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 9, 1999</i>
+<p><i>Last modified:  July 11, 1999</i>
 
 </body>
 </html>
