--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -47,12 +47,13 @@
 
 <h2>Welcome to the egcs project!</h2>
 
-<p>Originally, egcs started as an experimental step in the development
-of GCC, the GNU C compiler (cf. the <a href="mission.html">original
-egcs mission statement</a>). In April 1999, the egcs steering
-committee was appointed official GNU maintainer for GCC (cf. the <a
-href="gccmission.html">gcc mission statement</a>) and GCC has been
-renamed to GNU Compiler Collection.</p>
+In April 1999, the egcs steering committee was appointed by the FSF
+as the official GNU maintainer for GCC.  At that time GCC was renamed
+from the "GNU C Compiler" to the "GNU Compiler Collection".
+
+<p>As a result of those changes the project has a new
+<a href="gccmission.html">mission statement</a> which more accurately
+reflects the fundamental goals of the egcs project.
 
 <p>We want to work closely with contributors to help and encourage
 them to submit their changes for inclusion in egcs.  The egcs project
@@ -68,8 +69,6 @@ suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
 <a href="egcs-1.1/egcs-1.1.2.html">egcs-1.1.2</a> is the current release.
 <a href="gcc-2.95/gcc-2.95.html">gcc-2.95</a> is the next major release.
-
-<p>egcs is pronounced "eggs", the c is silent.
 <hr>
 
 
@@ -152,9 +151,9 @@ bounds-checking for Fortran code.)
 <!--#include virtual="/searchbox.html"-->
 
 <address>
-<a href="about.html">The egcs team</a>
+<a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on June 29, 1999.</i></small>
+<small><i>Last modified on July 11, 1999.</i></small>
 </address>
 
 </body>
