--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -83,17 +83,23 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>July 11, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated support for a generic i386-elf target.
+<small>(Note that this will not be included in gcc 2.95.)</small>
+</dd>
+
 <dt><b>June 29, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated hpux11 support.
-<small>(Note that this will not yet be included in gcc 2.95.)</small>
+<small>(Note that this will not be included in gcc 2.95.)</small>
 </dd>
 
 <dt><b>June 15, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated a major rewrite of the Intel IA-32
 back end, focusing on better optimization for the Pentium II.
-<small>(Note that this will not yet be included in gcc 2.95.)</small>
+<small>(Note that this will yet be included in gcc 2.95.)</small>
 </dd>
 
 <dt><b>May 27, 1999</b></dt>
