Move news items from index.html to news.html.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,50 @@ home page</a>.
 
 <dl>
 
+<dt><b>May 27, 1999</b></dt>
+<dd>
+Toon Moene has emailed (and posted) his notes on
+the GNU Fortran (<code>g77</code>) Birds-of-a-Feather (BOF) session at <a
+href="http://www.linuxexpo.org/">LinuxExpo</a>
+to the appropriate lists,
+and Craig Burley has made Toon's notes available (in edited form) at <a
+href="http://world.std.com/~burley/bof.html">http://world.std.com/~burley/bof.html</a>.
+
+<br>Probably the most important decision reached at the meeting
+is that Craig Burley will undertake the long-awaited <q>0.6 rewrite</q>
+of the <code>g77</code> front end as his top priority for
+the <code>gcc</code> 3.0 release,
+rather than focusing on implementing some of the <q>most wanted</q>
+features that didn't require the rewrite,
+such as Cray pointers.
+
+<br>The BOF provided us with
+some additional information to guide future development of
+GNU Fortran.
+Thanks to all who attended, whether in person or in spirit!
+</dd>
+
+<dt><b>May 18, 1999</b></dt>
+<dd>
+The sixth snapshot of the ongoing re-written C++ Standard Library has
+been released.  It includes SGI STL 3.2, an automatically generated
+<code>&lt;limits&gt;</code>, a partially re-written valarray, a working
+stringbuf and stringstream (for basic types). For more informtaion,
+please check <a href="http://sourceware.cygnus.com/libstdc++/">
+libstdc++-2.90.5</a>. 
+</dd>
+
+<dt><b>April 23, 1999</b></dt>
+<dd>
+<code>g77</code> now supports optional run-time checking
+of array subscript expressions
+via the <code>-fbounds-check</code> compiler option.
+(The same option applies to whatever bounds-checking
+applies for other languages, such as Java.
+The <code>-ffortran-bounds-check</code> option specifies
+bounds-checking for Fortran code.)
+</dd>
+
 <dt><b>April 20, 1999</b></dt>
 <dd>
 Yes, it is not a hoax: The egcs steering committee is appointed official
@@ -284,7 +328,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on June 26, 1999.</i>
+<i>Last modified on July 12, 1999.</i>
 
 </body>
 </html>
