Change "not yet be included in gcc 2.95" to "not be...".

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,20 +86,20 @@ maintain and improve quality.
 <dt><b>July 11, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated support for a generic i386-elf target.
-<small>(Note that this will not yet be included in gcc 2.95.)</small>
+<small>(Note that this will not be included in gcc 2.95.)</small>
 </dd>
 
 <dt><b>June 29, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated hpux11 support.
-<small>(Note that this will not yet be included in gcc 2.95.)</small>
+<small>(Note that this will not be included in gcc 2.95.)</small>
 </dd>
 
 <dt><b>June 15, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated a major rewrite of the Intel IA-32
 back end, focusing on better optimization for the Pentium II.
-<small>(Note that this will not yet be included in gcc 2.95.)</small>
+<small>(Note that this will not be included in gcc 2.95.)</small>
 </dd>
 
 </dl>
