Mention GNATS in FAQ

--- a/htdocs/java/FAQ.html
+++ b/htdocs/java/FAQ.html
@@ -10,6 +10,13 @@
       <dt>What license is used for libgcj?</dt>
       <dd>libgcj is distributed under the Library GPL.</dd>
 
+      <dt>How can I report a bug in libgcj?</dt>
+      <dd>libgcj has a corresponding
+	<a
+      href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Gnats
+	  bug database</a> which you can browse.  You can also submit new
+	bug reports from the Gnats page.</dd>
+
       <dt>How can I contribute to libgcj?</dt>
       <dd>You can send simple bug fixes in as patches.  Please follow
 	the <a href="http://egcs.cygnus.com/contribute.html">egcs guidelines
