Fix markup issues.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -75,7 +75,7 @@ Although it's conceivable that the error could be triggered by other
 code, only G77-compiled code has been observed to cause this abort.
 If you are getting core dumps immediately upon execution of your
 g77 program - and especially if it's compiled with -fPIC - try applying
-<a href="sco_osr5_g77.patch"><code>`sco_osr5_g77.patch`</a> to your libf2c and 
+<a href="sco_osr5_g77.patch"><code>`sco_osr5_g77.patch'</code></a> to your libf2c and 
 rebuilding
 GCC.  Affected faults, when analyzed in a debugger, will show a stack
 backtrace with a fault occurring in <code>rtld()</code> and the program
