Mention java-prs mailing list

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -20,7 +20,7 @@ the Java Language.
 
 <h2>Mailing lists</h2>
 
-<p>We have three mailing lists set up for our Java related
+<p>We have four mailing lists set up for our Java related
 work: 
 
 <dl>
@@ -36,6 +36,10 @@ work:
 <dd>
    Moderate volume patch submission/discussion mailing list.
 </dd>
+<dt><b><a href="/ml/java-prs/">java-prs</a></b></dt>
+<dd>
+   Notification of new Java PRs.
+</dd>
 </dl>
 
 <p>Use this handy little form to subscribe or unsubscribe from any
@@ -48,6 +52,7 @@ of these lists:
    <option value="java-announce">java-announce
    <option value="java-discuss">java-discuss
    <option value="java-patches">java-patches
+   <option value="java-prs">java-prs
   </select>
   <tt>&nbsp;</tt>
   Your e-mail address:
