Add the checkin policies/procedures page to the "development" section. Minor updates to checkin policies and procedures

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,7 +29,8 @@
 <A HREF="projects.html">Open projects</A><BR>
 <A HREF="egcstensions.html">Egcstensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
-<A HREF="cvswrite.html">CVS write access</A>
+<A HREF="cvswrite.html">CVS write access</A><BR>
+<A HREF="checkin.html">Commit Policies/Procedures </A>
 </P>
 <H2>Bugs</H2>
 <P>
