Note need for gas snapshot if using PA2.0 features.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -121,6 +121,10 @@ any native-target EGCS tools you may have installed.
 We <b>highly</b> recommend using gas/binutils-2.8 or newer on all hppa
 platforms; you may encounter a variety of problems when using the HP assembler.
 
+If you wish to use pa-risc 2.0 architecture support, you must use either the
+HP assembler or a recent
+<a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots">snapshot of gas</a>.
+
 <p><b>hppa*-hp-hpux9</b><br>
 The HP assembler has major problems on this platform.  We've tried to work
 around the worst of the problems.  However, those workarounds may be causing
@@ -252,7 +256,7 @@ linker; duplicate copies of inlines, vtables and template instantiations
 will be discarded automatically.
 
 <hr>
-<i>Last modified on July 9, 1999.</i>
+<i>Last modified on July 12, 1999.</i>
 
 </body>
 </html>
