--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -475,6 +475,9 @@ glibc-2.1.1
 <th>
 redhat-6.0
 </th>
+<th>
+lapack
+</th>
 </tr>
 <tr>
 <td>
@@ -486,6 +489,27 @@ alphaev6-unknown-linux-gnu
 OK
 </td>
 <td>
+</td>
+<td>
+FAILS
+</td>
+</tr>
+<tr>
+<td>
+hppa1.1-hp-hpux10.20
+</td>
+<td>
+N/A
+</td>
+<td>
+N/A
+</td>
+<td>
+N/A
+</td>
+<td>
+-O2 OK<br>
+-O3 -funroll-loops fails
 </td>
 </tr>
 <tr>
@@ -519,6 +543,9 @@ korganizer
 python
 sgml-tools
 </td>
+<td>
+OK
+</td>
 </tr>
 <tr>
 <td>
@@ -531,6 +558,9 @@ powerpc-unknown-linux-gnu
 OK
 </td>
 <td>
+</td>
+<td>
+-O2 OK
 </td>
 </tr>
 <tr>
@@ -560,7 +590,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on July 7, 1999.</i>
+<p><i>Last modified on July 13, 1999.</i>
 
 </body>
 </html>
