--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -30,10 +30,6 @@
   on alphas, hppas, rs6000/powerpc and mips based platforms.  Exception
   handling is known to work on x86-linux platforms with shared libraries.
 
-  <li> Some versions of the Linux kernel have bugs which prevent them
-  from being compiled or from running when compiled by gcc-2.95.  See
-  <a href="../faq.html#linuxkernel">the FAQ</a> for additional information.
-
   <li> In general, gcc-2.95 is more rigorous about rejecting invalid C++ code
   or deprecated C++ constructs than g++-2.7, g++-2.8, egcs-1.0, or egcs-1.1.
   As a result it may be necessary to fix C++ code before it will compile with
@@ -46,10 +42,15 @@
 
   <li>gcc-2.95 compiled C++ code is not binary compatible with egcs-1.1,
   egcs-1.0.x or gcc-2.8.x.
+
+  <li>gcc-2.95 does not have changes from the gcc-2.8 tree that were made
+  between Sept 30, 1998 and April 30, 1999 (the official end of the gcc-2.8
+  project).   Future GCC releases will include all the changes from the
+  defunct gcc-2.8 project.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 11, 1999</i>
+<p><i>Last modified:  July 13, 1999</i>
 
 </body>
 </html>
