--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -16,9 +16,11 @@ from the same site where you downloaded the core distribution and language
 front ends.</p>
 
 <p>Second, you must have a new version of dejagnu on your system; dejagnu-1.3
-will not work.  We have made a 
-<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-19981026.tar.gz">
-dejagnu snapshot</a> available until a new version of dejagnu can be released.
+will not work.  We have made dejagnu snapshots available in
+<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure">
+egcs.cygnus.com:/pub/egcs/infrastructure</a> until a new version of
+dejagnu can be released.  If you find multiple snapshots of dejagnu
+there, you should probably get the most recent one.
 (Note, dejagnu will not build/run on NEXTSTEP systems.)</p>
 
 
@@ -101,7 +103,7 @@ should look here first if you think your results are unreasonable.</p>
 
 
 <hr>
-<i>Last modified on July  7, 1999.</i>
+<i>Last modified on July 13, 1999.</i>
 
 </body>
 </html>
