Remove duplicate duplicate duplicate...

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -14,7 +14,7 @@ access to the repository.
 <p>The egcs project grants some developers various levels of write access
 to the egcs master sources.  CVS doesn't provide fine grained control over
 access to the repository; therefore, we depend on each developer to follow
-follow the appropriate policies.
+the appropriate policies.
 
 <ul>
   <li>Global write permission.  A very limited number of developers have
@@ -269,7 +269,7 @@ you should check them in with separate cvs commit commands.
 <p>And that's it!
 
 <hr>
-<i>Last modified on July 12, 1999.</i>
+<i>Last modified on July 13, 1999.</i>
 
 </body>
 </html>
