Remove the announcement character of this page. Remove various parts concerning SSH and the web pages and shorten others.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-<title> Read-write CVS access</title>
+<title>Read-write CVS access</title>
 </head>
 <body>
 
-<p>February 2, 1998
-
-<p>It took longer than we would have liked, but we now have read/write
-access available the CVS repository for all our significant developers.
+<p>We have read/write access to the CVS repository available for all our
+significant developers.
 
 <p>If you don't already have CVS, we recommend you pick up a recent copy from
 cyclic software at <a href="http://www.cyclic.com/">http://www.cyclic.com</a>.
@@ -15,11 +13,7 @@ cyclic software at <a href="http://www.cyclic.com/">http://www.cyclic.com</a>.
 <p>Authenticated access is provided via ssh, which you can retrieve from
 <a href="ftp://ftp.cs.hut.fi/pub/ssh/">ftp://ftp.cs.hut.fi/pub/ssh/</a>.
 ssh should build and install without any trouble and the default
-configuration files should be suitable for access to the egcs CVS
-server.  Packaged versions for Debian and RedHat GNU/Linux systems are
-available from
-<a href="ftp://ftp.replay.com/pub/replay/pub/linux/">
-ftp://ftp.replay.com/pub/replay/pub/linux/</a>.
+configuration files should be suitable for access to our CVS server.
 
 <p>You will need to provide us with your public key.  You can generate one
 via the "ssh-keygen" program.  This will store your public key in to the
@@ -28,9 +22,9 @@ of that file.  You should mail it directly to <a href="mailto:law@cygnus.com">
 law@cygnus.com</a>.  Yes, we realize it's a public key, but there's no sense
  in cluttering up the developers list with keys.
 
-<p>Once we have this information we will set up an account on egcs.cygnus.com
-and send you mail notifying you that the account is ready.  At this point you
-should be able to check out a tree with CVS and add yourself to the MAINTAINERS
+<p>Once we have this information we will set up an account on
+egcs.cygnus.com and inform you by mail.  At this point you should be
+able to check out a tree with CVS and add yourself to the MAINTAINERS
 file to test write access.
 
 
@@ -71,22 +65,13 @@ Host egcs.cygnus.com<br>
 ForwardX11 no
 </code></blockquote>
 
-<p>Enjoy!
+<h2>Web pages</h2>
 
-<p>March 06 1998
-
-<p>Late breaking news: the web pages and CGI scripts are now also
-editable remotely.  Check out wwwdocs instead of egcs (e.g. type
-<blockquote><code>
-cvs -z 9 -d :ext:egcs.cygnus.com:/cvs/egcs co wwwdocs
-</code></blockquote>
-on your workstation) and make whatever changes you deem necessary.
-Web pages go under htdocs/, cgi scripts under cgi-bin/.  When you check
-your changes back in they will automatically be checked out into the
-web server's data area.
+<p>Note that when you check in changes to our web pages, these will
+automatically be checked out into the web server's data area.
 
 <hr>
-<i>Last modified on April  3, 1999.</i>
+<i>Last modified on July 14, 1999.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
