Add new mirror in france.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -22,6 +22,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
+<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
@@ -99,7 +100,7 @@ where the mirror is located.
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on June 17, 1999.</i>
+<i>Last modified on July 13, 1999.</i>
 
 </body>
 </html>
