--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -15,45 +15,36 @@
 <br><a href="schedule.html">gcc-2.95 schedule</a>
 
 <h2> XXX This is a template only.  Anything beyond this point may be a lie</h2>
-<p>Some date in the future.
+<p>Some date in the near future.
 
-<p>We are pleased to announce the release of gcc-2.95.
+<p>The GCC project is pleased to announce the release of gcc-2.95.  gcc-2.95
+represents the first release of the GNU Compiler Collection since the
+April 1999 EGCS/GCC reunification.
 
-<p>EGCS is a free software project to further the development of the
-GNU compilers using an open development environment.
-
-<p>gcc-2.95 is a major new release of the egcs compiler system.  It has been
+<p>gcc-2.95 is a major release of the GNU Compiler Collection and includes
+nearly a year of development and bugfixes.  It has been
 <a href="regress.html">extensively tested</a> and is believed to be
 stable and suitable for widespread use.
-
-<p>gcc-2.95 is based on an Sept 30, 1998 snapshot of the gcc-2.8 development
-sources; it contains all of the new features found in gcc-2.8.1 as well as
-all new development from gcc2 up to Sept 30, 1998.
-
-
-<p>egcs also contains many improvements and features not found in gcc2 or
-in older versions of egcs.
-<ul>
-</ul>
 
 <p>See the <a href="features.html">new features</a> page for a more complete
 list of new features found in gcc-2.95 releases.
 
 <p>The gcc-2.95 release includes installation instructions in both HTML
-and plaintext forms (see the INSTALL directory in the toplevel directory
-of the gcc-2.95 distribution).  However, we also keep the most up to date
-<a href="../install/index.html">installation instructions </a>
+and plaintext forms (see the install subdirectory in the gcc-2.95
+ distribution).  However, we also keep the most up to date
+<a href="../install/index.html">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
-<p> The egcs project would like to thank the numerous people that have
+<p> The gcc project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
 <a href="../thanks.html">amazing group of volunteers</a> is what makes
-egcs successful.
+gcc successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using gcc-2.95.
 
+<p>XXX FSF mirror sites
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download gcc-2.95
 from egcs.cygnus.com (USA California)</a>
@@ -66,7 +57,7 @@ provided by Stanford)</a>
 
 
 <hr>
-<i>Last modified on June 1, 1999.</i>
+<i>Last modified on July 13, 1999.</i>
 
 </body>
 </html>
