Various updates in preparation for the gcc-2.95 release.

--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -20,6 +20,13 @@
   Please refer to the <a href="../faq.html#linuxkernel">FAQ</a> for more
   information on this issue.
 
+  <li>gcc-2.95 has a known bug in its handling of complex variables for
+  64bit targets.  Instead of silently generating incorrect code, gcc-2.95
+  will issue a fatal error for situations it can not handle.
+
+  This primarly effects the Fortran community as Fortran makes more use of
+  complex variables than C or C++.
+
   <li>gcc-2.95 has an integrated libstdc++, but does not have an integrated
   libg++.  Furthermore old libg++ releases will not work with gcc-2.95.  You can
   retrieve a recent copy of libg++ from the
