--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -9,7 +9,7 @@
   <li> General Optimizer Improvements:
   <ul>
     <li><a href="../news/spill.html">Localized register spilling</a> to improve
-    speed and code density on small register class machines.
+    speed and code density especially on small register class machines.
     <li><a href="../news/lcm.html">Global CSE using lazy code motion
     algorithms</a>.
     <li><a href="../news/cprop.html">Improved global constant/copy
