--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -5,36 +5,30 @@
 <body>
 <h1 align="center">gcc-2.95</h1>
 
-<p> Links to various info about gcc-2.95.  
-<br><a href="branch.html">How to check out the gcc-2.95 branch</a> 
-<br><a href="c++features.html">New C++ features for gcc-2.95</a>
-<br><a href="../onlinedocs/g77_news.html">New Fortran features for gcc-2.95</a>
-<br><a href="features.html">Other new features in gcc-2.95</a>
-<br><a href="caveats.html">Caveats of using gcc-2.95</a>
-<br><a href="regress.html">Testing strategy and status</a>
-<br><a href="schedule.html">gcc-2.95 schedule</a>
+<h2> XXX This is a template only.  It will change.</h2>
+<p>July XX, 1999
 
-<h2> XXX This is a template only.  Anything beyond this point may be a lie</h2>
-<p>Some date in the near future.
+<p>The GCC project is pleased to announce the release of gcc-2.95.
 
-<p>The GCC project is pleased to announce the release of gcc-2.95.  gcc-2.95
-represents the first release of the GNU Compiler Collection since the
-April 1999 EGCS/GCC reunification.
+<p>gcc-2.95 is the first release of the GNU Compiler Collection since the
+April 1999 GCC/EGCS reunification and includes nearly a year's worth of
+new development and bugfixes.
 
-<p>gcc-2.95 is a major release of the GNU Compiler Collection and includes
-nearly a year of development and bugfixes.  It has been
-<a href="regress.html">extensively tested</a> and is believed to be
-stable and suitable for widespread use.
+<p>gcc-2.95 has been extensively <a href="regress.html">regression tested</a>
+and <a href="othertest.html">package tested</a>.  It should be reliable
+and suitable for widespread use.
 
-<p>See the <a href="features.html">new features</a> page for a more complete
-list of new features found in gcc-2.95 releases.
+<p>gcc-2.95 has several new optimizations, new targets, new languages, and
+other new features.  See the <a href="features.html">new features</a> page for
+a complete list of new features found in gcc-2.95 releases.
 
-<p>The gcc-2.95 release includes installation instructions in both HTML
-and plaintext forms (see the install subdirectory in the gcc-2.95
- distribution).  However, we also keep the most up to date
-<a href="../install/index.html">installation instructions</a>
-and <a href="buildstat.html">build/test status</a> on our web page.  We
+<p>The gcc-2.95 source release includes installation instructions in both HTML
+and plaintext forms in the <code>install</code> directory in the distribution.
+However, the most up to date
+ <a href="../install/index.html">installation instructions</a>
+and <a href="buildstat.html">build/test status</a> on the web pages.  We
 will update those pages as new information becomes available.
+
 
 <p> The gcc project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
@@ -46,15 +40,13 @@ gcc successful.
 
 <p>XXX FSF mirror sites
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download gcc-2.95
+FTP Download gcc-2.95
 from egcs.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
-Download gcc-2.95 from go.cygnus.com (USA California -- High speed link
+FTP Download gcc-2.95 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
-
-<p>The gcc-2.95 release is also available on many mirror sites.<br>
+<p>The gcc-2.95 release is available on many FTP mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
-
 
 <hr>
 <i>Last modified on July 13, 1999.</i>
