Fix mirror directory for go.cygnus.com (it moved again).

--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -58,7 +58,7 @@ egcs successful.
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1
 from egcs.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
+<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 
