--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -42,7 +42,7 @@ gcc successful.
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 FTP Download gcc-2.95
 from egcs.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
+<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
 FTP Download gcc-2.95 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 <p>The gcc-2.95 release is available on many FTP mirror sites.<br>
