--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -12,7 +12,7 @@ egcs.cygnus.com server is in California in the US.  Please let us know
 if you are mirroring the egcs pages so we can note it here!
 
 <ul>
-<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
+<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
 <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
