--- a/htdocs/egcs-1.0/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0/egcs-1.0.1.html
@@ -120,7 +120,7 @@ downloading egcs (go.cygnus.com)!
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.0.1
 from ftp.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
+<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.0.1 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 
