--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -189,7 +189,7 @@ egcs successful.
 <! -- <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1.2
 from egcs.cygnus.com (USA California)</a> -->
-<p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
+<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1.2 from go.cygnus.com (USA California - High speed link
 provided by Stanford)</a>
 
