First round of changesf or gcc-2.95

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-<title>Configuring egcs</title>
+<title>Configuring gcc</title>
 </head>
 <body>
-<h1 align="center">Configuring egcs</h1>
+<h1 align="center">Configuring gcc</h1>
 
-<p>Like most GNU software, egcs must be configured before it can be built.
-This document attempts to describe the recommended configuration procedure
+<p>Like most GNU software, gcc must be configured before it can be built.
+This document describes the recommended configuration procedure
 for both native and cross targets.
 
 <p>We use <i>srcdir</i> to refer to the toplevel source directory for
-egcs; we use <i>objdir</i> to refer to the toplevel build/object
-directory for egcs.
+gcc; we use <i>objdir</i> to refer to the toplevel build/object
+directory for gcc.
 
-<p>First, we <b>highly</b> recommend that egcs be built into a
+<p>First, we <b>highly</b> recommend that gcc be built into a
 separate directory than the sources which does <b>not</b> reside
-within the source tree.  This is how we generally build egcs; building
+within the source tree.  This is how we generally build gcc; building
 where <i>srcdir</i> == <i>objdir</i> should still work, but doesn't
 get extensive testing; building where <i>objdir</i> is a subdirectory
 of <i>srcdir</i> is unsupported.
@@ -24,7 +24,7 @@ of <i>srcdir</i> is unsupported.
 your path or you must set CC in your environment before running configure.
 Otherwise the configuration scripts may fail.
 
-<p>To configure egcs:
+<p>To configure gcc:
 
 <blockquote>
 <tt>
@@ -37,7 +37,7 @@ Otherwise the configuration scripts may fail.
 
 <p><b>target specification</b>
 <ul>
-  <li> egcs has code to correctly determine the correct value for
+  <li> gcc has code to correctly determine the correct value for
   <b>target</b> for nearly all native systems.  Therefore, we highly
   recommend you not provide a configure target when configuring a
   native compiler.
@@ -50,7 +50,7 @@ Otherwise the configuration scripts may fail.
 <p><b> options specification</b>
 
 <p>Use <b>options</b> to override several configure time options for
-egcs.  A partial list of supported <tt>options</tt>:
+gcc.  A partial list of supported <tt>options</tt>:
 
 <ul>
   <li> <tt>--prefix=</tt><i>dirname</i> -- Specify the toplevel installation
@@ -138,7 +138,7 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-languages=</tt><i>lang1</i><tt>,</tt><i>lang2</i><tt>,...</tt>
   -- Specify that only a particular subset of compilers and their runtime libraries
   should be built. For a list of valid values for <i>lang</i><tt>x</tt> you can issue
-  the following command in the <tt>gcc</tt> directory of your egcs source tree:<br>
+  the following command in the <tt>gcc</tt> directory of your gcc source tree:<br>
   <tt>
   grep language= */config-lang.in
   </tt><br>
@@ -158,12 +158,12 @@ egcs.  A partial list of supported <tt>options</tt>:
 <p>Some options which only apply to building cross compilers:
 <ul>
   <li> <tt>--with-headers=</tt><i>dir</i> -- Specifies a directory which has
-  target include files.  These include files will be copied into the egcs
+  target include files.  These include files will be copied into the gcc
   install directory.  Fixincludes will be run on these files to make them
-  compatible with egcs.
-  <li> <tt>--with-libs=</tt><i>dir1 ... dirN</i> -- Specifies a list of
+  compatible with gcc.
+  <li> <tt>--with-libs=</tt><i>"dir1 dir2 ... dirN"</i> -- Specifies a list of
   directories which contain the target runtime libraries.  These libraries will
-  be copied into the egcs install directory.
+  be copied into the gcc install directory.
   <li> <tt>--with-newlib</tt> -- Specifies that "newlib" is being used as the target
   C library.   This causes __eprintf to be omitted from libgcc.a on the
   assumption that it will be provided by newlib.
@@ -175,7 +175,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on July 7, 1999.</i>
+<i>Last modified on July 15, 1999.</i>
 
 </body>
 </html>
