--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -1,26 +1,26 @@
 <html>
 <head>
-<title>Building egcs </title>
+<title>Building gcc</title>
 </head>
 <body>
-<h1 align="center">Building egcs</h1>
+<h1 align="center">Building gcc</h1>
 
-<p>Now that egcs is configured, you are ready to build the compiler and
+<p>Now that gcc is configured, you are ready to build the compiler and
 runtime libraries.
 
-<p>We <b>highly</b> recommend that egcs be built using gnu-make; other
+<p>We <b>highly</b> recommend that gcc be built using gnu-make; other
 versions may work, then again they might not.  To be safe build with gnu-make.
 
 <p><b>Building a native compiler</b>
 <p>For a native build issue the command `<code>make bootstrap</code>'.  This 
-will build the entire egcs compiler system, which includes the following steps:
+will build the entire gcc compiler system, which includes the following steps:
 
 <ul>
   <li> Build host tools necessary to build the compiler such as texinfo, bison,
   gperf.<p>
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the egcs source tree.<p>
+  binutils if they have been properly unpacked into the gcc source tree.<p>
 
   <li> Perform a 3-stage bootstrap of the compiler.<p>
 
@@ -56,14 +56,14 @@ that re-defining LANGUAGES when calling `<code>make bootstrap</code>'
 <a href="http://www.objsw.com/CrossGCC/">
 crossgcc FAQ</a> for information about building cross compilers.
 
-<p>For a cross build, issue the command "make cross", which performs the
+<p>For a cross build, issue the command "make", which performs the
 following steps:
 <ul>
   <li> Build host tools necessary to build the compiler such as texinfo, bison,
   gperf.<p>
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the egcs source tree.<p>
+  binutils if they have been properly unpacked into the gcc source tree.<p>
 
   <li> Build the compiler (single stage only).<p>
 
@@ -77,13 +77,13 @@ following steps:
 
 <p> If you have a multiprocessor you can use `<code>make bootstrap
 MAKE="make -j 2" -j 2</code>' instead of just `<code>make bootstrap</code>'
-when building EGCS.  You can use a bigger number instead of two if
+when building gcc.  You can use a bigger number instead of two if
 you like.  In most cases, it won't help to use a number bigger than
 the number of processors in your machine.
 
 <p>
 <hr>
-<i>Last modified on July 6, 1999.</i>
+<i>Last modified on July 15, 1999.</i>
 
 </body>
 </html>
