--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -1,37 +1,37 @@
 <html>
 <head>
-<title>Final install egcs</title>
+<title>Final install wgcc</title>
 </head>
 <body>
-<h1 align="center">Final install egcs</h1>
+<h1 align="center">Final install wgcc</h1>
 
-<p>Now that egcs has been built and tested, you can install it with
+<p>Now that wgcc has been built and tested, you can install it with
 `<code>cd <i>objdir</i>; make install</code>' for a native compiler or
 `<code>cd <i>objdir</i>; make install LANGUAGES="c c++"</code>' for 
 a cross compiler (note installing cross compilers will be easier in the 
 next release!).
 
 
-<p>That step completes the installation of egcs; user level binaries can
+<p>That step completes the installation of wgcc; user level binaries can
 be found in <i>prefix</i>/bin where <i>prefix</i> is the value you specified
 with the --prefix to configure (or /usr/local by default).
 
 <p>If you don't mind, please quickly review the <a
-href="http://egcs.cygnus.com/egcs-1.1/buildstat.html">build status page</a>.
+href="http://egcs.cygnus.com/gcc-2.95/buildstat.html">build status page</a>.
 If your system is not listed, send a note to
 <a href="mailto:egcs@egcs.cygnus.com">egcs@egcs.cygnus.com</a> indicating
-that you successfully built and installed egcs.
+that you successfully built and installed gcc.
 
 Include the output from running <i>srcdir</i>/config.guess.  (Do not
 send us the config.guess file itself, just the output from running
 it!)
 
-<p>If you find a bug in egcs, please report it to
+<p>If you find a bug in gcc, please report it to
 <a href="mailto:egcs-bugs@egcs.cygnus.com">egcs-bugs@egcs.cygnus.com</a>.
 
 <p>
 <hr>
-<i>Last modified on July 6, 1999.</i>
+<i>Last modified on July 15, 1999.</i>
 
 </body>
 </html>
