--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-<title>Installing egcs</title>
+<title>Installing gcc</title>
 </head>
 <body>
-<h1 align="center">Installing egcs</h1>
+<h1 align="center">Installing gcc</h1>
 
 <p>The latest version of this document is always available at <a href="
 http://egcs.cygnus.com/install/">http://egcs.cygnus.com/install/</a>.
 
-<p>This document describes the generic installation procedure for egcs as
-well as detailing some target specific installation instructions for egcs.
+<p>This document describes the generic installation procedure for gcc as
+well as detailing some target specific installation instructions for gcc.
 
-<p>egcs includes several components that previously were separate distributions
+<p>gcc includes several components that previously were separate distributions
 with their own installation instructions.  This document supercedes all 
 package specific installation instructions.  We provide the component specific
 installation information in the source distribution for historical reference
@@ -19,7 +19,7 @@ purposes only.
 
 <p>We recommend you read the entire generic installation instructions as
 well as any target specific installation instructions before you proceed
-to configure, build, test and install egcs.
+to configure, build, test and install gcc.
 
 <p>If something goes wrong in the configure, build, test or install
 procedures, first double check that you followed the generic and target
@@ -30,10 +30,11 @@ a bug report.
 <p><em>Before</em> starting the build/install procedure <em>please</em> browse the
 <a href="specific.html">host/target specific installation notes</a>.
 
-<p>The installation procedure is broken into four steps.
+<p>The installation procedure is broken into five steps.
 
 <ul>
 
+  <li> <a href="download.html">downloading the source</a>
   <li> <a href="configure.html">configure</a>
   <li> <a href="build.html">build</a>
   <li> <a href="test.html">test</a> (optional)
@@ -42,8 +43,8 @@ a bug report.
 </ul>
 
 <hr>
-<a href="../index.html">Return to the egcs home page</a>
+<a href="../index.html">Return to the gcc home page</a>
 <hr>
-<i>Last modified on July 6, 1999.</i>
+<i>Last modified on July 15, 1999.</i>
 </body>
 </html>
