--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<title>Final install wgcc</title>
+<title>Final install gcc</title>
 </head>
 <body>
-<h1 align="center">Final install wgcc</h1>
+<h1 align="center">Final install gcc</h1>
 
-<p>Now that wgcc has been built and tested, you can install it with
+<p>Now that gcc has been built and tested, you can install it with
 `<code>cd <i>objdir</i>; make install</code>' for a native compiler or
 `<code>cd <i>objdir</i>; make install LANGUAGES="c c++"</code>' for 
 a cross compiler (note installing cross compilers will be easier in the 
 next release!).
 
 
-<p>That step completes the installation of wgcc; user level binaries can
+<p>That step completes the installation of gcc; user level binaries can
 be found in <i>prefix</i>/bin where <i>prefix</i> is the value you specified
 with the --prefix to configure (or /usr/local by default).
 
